# habari

./: .gitignore  MANIFEST.in  README.md  go.mod  justfile  keyword_manager.go  pyproject.toml  setup.py
.github/workflows/: python-wheels.yml
cmd/habari/: main.go
python/bridge/: main.go
python/src/habari/: __init__.py
python/tests/: test_python_api.py
test/: data.json  failing.json  habari_test.go
