[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "habari-python"
version = "0.1.14"
description = "Python bindings for Habari, a smart video filename parser written in Go."
readme = "README.md"
requires-python = ">=3.14"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "TotallyLegitimateOrg" }]
keywords = ["anime", "filename", "parser", "metadata", "video"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Go",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/TotallyLegitimateOrg/habari"
Source = "https://github.com/TotallyLegitimateOrg/habari"
Issues = "https://github.com/TotallyLegitimateOrg/habari/issues"

[dependency-groups]
dev = [
    "build>=1.3",
    "cibuildwheel>=3.4.1",
    "pytest>=8",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["python/src"]

[tool.setuptools.package-data]
habari = ["py.typed", "_native/*"]

[tool.cibuildwheel]
build = "cp314-*"
archs = ["native"]
skip = "*-musllinux_* *-win32"
test-requires = ["pytest>=8"]
test-command = "pytest {project}/python/tests"
test-environment = { HABARI_TEST_INSTALLED_WHEEL = "1" }

[tool.cibuildwheel.linux]
before-all = "python {project}/python/build/install_go.py"
environment = { PATH = "/usr/local/go/bin:$PATH" }

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
